--- a/tests/integration/targets/dns_domain/tasks/tests.yml
+++ b/tests/integration/targets/dns_domain/tasks/tests.yml
@@ -9,28 +9,28 @@
 - name: verify setup
   assert:
     that:
-    - result is success
+      - result is success
 
 - name: test fail if missing name
   vultr.cloud.dns_domain:
   register: result
-  ignore_errors: yes
+  ignore_errors: true
 - name: verify test fail if missing name
   assert:
     that:
-    - result is failed
-    - 'result.msg == "missing required arguments: domain"'
+      - result is failed
+      - 'result.msg == "missing required arguments: domain"'
 
 - name: test fail if missing params for state=present
   vultr.cloud.dns_domain:
     name: "{{ vultr_dns_domain_name }}"
   register: result
-  ignore_errors: yes
+  ignore_errors: true
 - name: verify fail if missing params for state=present
   assert:
     that:
-    - result is failed
-    - 'result.msg == "state is present but all of the following are missing: ip"'
+      - result is failed
+      - 'result.msg == "state is present but all of the following are missing: ip"'
 
 - name: test create dns domain in check mode
   vultr.cloud.dns_domain:
@@ -38,11 +38,11 @@
     dns_sec: enabled
     server_ip: 10.10.10.10
   register: result
-  check_mode: yes
+  check_mode: true
 - name: verify test create dns domain in check mode
   assert:
     that:
-    - result is changed
+      - result is changed
 
 - name: test create dns domain
   vultr.cloud.dns_domain:
@@ -53,9 +53,9 @@
 - name: verify test create dns domain
   assert:
     that:
-    - result is changed
-    - result.vultr_dns_domain.domain == vultr_dns_domain_name
-    - result.vultr_dns_domain.dns_sec == 'enabled'
+      - result is changed
+      - result.vultr_dns_domain.domain == vultr_dns_domain_name
+      - result.vultr_dns_domain.dns_sec == 'enabled'
 
 - name: test create dns domain idempotence
   vultr.cloud.dns_domain:
@@ -66,9 +66,9 @@
 - name: verify test create dns domain idempotence
   assert:
     that:
-    - result is not changed
-    - result.vultr_dns_domain.domain == vultr_dns_domain_name
-    - result.vultr_dns_domain.dns_sec == 'enabled'
+      - result is not changed
+      - result.vultr_dns_domain.domain == vultr_dns_domain_name
+      - result.vultr_dns_domain.dns_sec == 'enabled'
 
 - name: test update dns domain in check mode
   vultr.cloud.dns_domain:
@@ -76,12 +76,12 @@
     dns_sec: disabled
     server_ip: 10.10.10.10
   register: result
-  check_mode: yes
+  check_mode: true
 - name: verify test create dns domain in check mode
   assert:
     that:
-    - result is changed
-    - result.vultr_dns_domain.dns_sec == 'enabled'
+      - result is changed
+      - result.vultr_dns_domain.dns_sec == 'enabled'
 
 - name: test update dns domain
   vultr.cloud.dns_domain:
@@ -92,9 +92,9 @@
 - name: verify test create dns domain
   assert:
     that:
-    - result is changed
-    - result.vultr_dns_domain.domain == vultr_dns_domain_name
-    - result.vultr_dns_domain.dns_sec == 'disabled'
+      - result is changed
+      - result.vultr_dns_domain.domain == vultr_dns_domain_name
+      - result.vultr_dns_domain.dns_sec == 'disabled'
 
 - name: test update dns domain idempotence
   vultr.cloud.dns_domain:
@@ -105,21 +105,21 @@
 - name: verify test create dns domain idempotence
   assert:
     that:
-    - result is not changed
-    - result.vultr_dns_domain.domain == vultr_dns_domain_name
-    - result.vultr_dns_domain.dns_sec == 'disabled'
+      - result is not changed
+      - result.vultr_dns_domain.domain == vultr_dns_domain_name
+      - result.vultr_dns_domain.dns_sec == 'disabled'
 
 - name: test absent dns domain in check mode
   vultr.cloud.dns_domain:
     name: "{{ vultr_dns_domain_name }}"
     state: absent
   register: result
-  check_mode: yes
+  check_mode: true
 - name: verify test absent dns domain in check mode
   assert:
     that:
-    - result is changed
-    - result.vultr_dns_domain.domain == vultr_dns_domain_name
+      - result is changed
+      - result.vultr_dns_domain.domain == vultr_dns_domain_name
 
 - name: test absent dns domain
   vultr.cloud.dns_domain:
@@ -129,8 +129,8 @@
 - name: verify test absent dns domain
   assert:
     that:
-    - result is changed
-    - result.vultr_dns_domain.domain == vultr_dns_domain_name
+      - result is changed
+      - result.vultr_dns_domain.domain == vultr_dns_domain_name
 
 - name: test absent dns domain idempotence
   vultr.cloud.dns_domain:
@@ -140,4 +140,4 @@
 - name: verify test absent dns domain idempotence
   assert:
     that:
-    - result is not changed
+      - result is not changed
