--- a/tests/integration/targets/os_info/tasks/main.yml
+++ b/tests/integration/targets/os_info/tasks/main.yml
@@ -4,13 +4,13 @@
 ---
 - name: test get vultr os infos in check mode
   vultr.cloud.os_info:
-  check_mode: yes
+  check_mode: true
   register: result
 
 - name: verify test get vultr os infos in check mode
   assert:
     that:
-    - result.vultr_os_info|selectattr('name','equalto', 'CentOS 7 x64') | list | count == 1
+      - result.vultr_os_info|selectattr('name','equalto', 'CentOS 7 x64') | list | count == 1
 
 - name: test get vultr os fact
   vultr.cloud.os_info:
@@ -19,4 +19,4 @@
 - name: verify test get vultr os infos
   assert:
     that:
-    - result.vultr_os_info|selectattr('name','equalto', 'CentOS 7 x64') | list | count == 1
+      - result.vultr_os_info|selectattr('name','equalto', 'CentOS 7 x64') | list | count == 1
