--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -3,7 +3,7 @@ name: Collection integration
 
 on:
   pull_request:
-    types: [ labeled ]
+    types: [labeled]
 
 jobs:
   integration-test:
@@ -17,59 +17,58 @@ jobs:
       fail-fast: false
       matrix:
         runner-python-version:
-        - 3.6
+          - 3.6
         python-version:
-        - 3.6
-        - 2.7
+          - 3.6
+          - 2.7
     steps:
-    - name: Check out code
-      uses: actions/checkout@v2
-      with:
-        path: ansible_collections/vultr/cloud
+      - name: Check out code
+        uses: actions/checkout@v2
+        with:
+          path: ansible_collections/vultr/cloud
 
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
-      with:
-        python-version: ${{ matrix.python-version }}
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v1
+        with:
+          python-version: ${{ matrix.python-version }}
 
-    - name: Install ansible and collection dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install ansible
+      - name: Install ansible and collection dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install ansible
 
-    - name: Build and install collection
-      run: |
-        ansible-galaxy collection build .
-        ansible-galaxy collection install *.gz
+      - name: Build and install collection
+        run: |
+          ansible-galaxy collection build .
+          ansible-galaxy collection install *.gz
 
-    - name: Add config file
-      env:
-        VULTR_CONFIG_FILE: ${{ secrets.VULTR_CONFIG_FILE }}
-      run: |
-        echo "$VULTR_CONFIG_FILE" > tests/integration/cloud-config-vultr.ini
+      - name: Add config file
+        env:
+          VULTR_CONFIG_FILE: ${{ secrets.VULTR_CONFIG_FILE }}
+        run: |
+          echo "$VULTR_CONFIG_FILE" > tests/integration/cloud-config-vultr.ini
 
-    - name: Run the tests
-      run: >-
-        ansible-test
-        integration
-        --docker
-        -v
-        --diff
-        --color
-        --retry-on-error
-        --python ${{ matrix.python-version }}
-        --continue-on-error
-        --coverage
-        cloud/vultr/
+      - name: Run the tests
+        run: >-
+          ansible-test
+          integration
+          --docker
+          -v
+          --diff
+          --color
+          --python ${{ matrix.python-version }}
+          --continue-on-error
+          --coverage
+          cloud/vultr
 
-    - name: Generate coverage report
-      run: >-
-        ansible-test
-        coverage xml
-        -v
-        --requirements
-        --group-by command
-        --group-by version
-    - uses: codecov/codecov-action@v1
-      with:
-        fail_ci_if_error: false
+      - name: Generate coverage report
+        run: >-
+          ansible-test
+          coverage xml
+          -v
+          --requirements
+          --group-by command
+          --group-by version
+      - uses: codecov/codecov-action@v1
+        with:
+          fail_ci_if_error: false
