--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,23 +12,23 @@ jobs:
       run:
         working-directory: ansible_collections/vultr/cloud
     steps:
-    - uses: actions/checkout@v2
-      with:
-        path: ansible_collections/vultr/cloud
+      - uses: actions/checkout@v2
+        with:
+          path: ansible_collections/vultr/cloud
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.x"
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install ansible
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install ansible
 
-    - name: Build and publish
-      env:
-        ANSIBLE_GALAXY_API_KEY: ${{ secrets.ANSIBLE_GALAXY_API_KEY }}
-      run: |
-        ansible-galaxy collection build .
-        ansible-galaxy collection publish *.tar.gz --api-key $ANSIBLE_GALAXY_API_KEY
+      - name: Build and publish
+        env:
+          ANSIBLE_GALAXY_API_KEY: ${{ secrets.ANSIBLE_GALAXY_API_KEY }}
+        run: |
+          ansible-galaxy collection build .
+          ansible-galaxy collection publish *.tar.gz --api-key $ANSIBLE_GALAXY_API_KEY
