--- a/tests/integration/targets/account_info/tasks/main.yml
+++ b/tests/integration/targets/account_info/tasks/main.yml
@@ -3,16 +3,16 @@
 ---
 - name: test get vultr account infos in check mode
   vultr.cloud.account_info:
-  check_mode: yes
+  check_mode: true
   register: result
 
 - name: verify test get vultr account infos in check mode
   assert:
     that:
-    - result.vultr_account_info.balance is defined
-    - result.vultr_account_info.last_payment_amount is defined
-    - result.vultr_account_info.last_payment_date is defined
-    - result.vultr_account_info.last_payment_amount is defined
+      - result.vultr_account_info.balance is defined
+      - result.vultr_account_info.last_payment_amount is defined
+      - result.vultr_account_info.last_payment_date is defined
+      - result.vultr_account_info.last_payment_amount is defined
 
 - name: test get vultr account fact
   vultr.cloud.account_info:
@@ -21,7 +21,7 @@
 - name: verify test get vultr account infos
   assert:
     that:
-    - result.vultr_account_info.balance is defined
-    - result.vultr_account_info.last_payment_amount is defined
-    - result.vultr_account_info.last_payment_date is defined
-    - result.vultr_account_info.last_payment_amount is defined
+      - result.vultr_account_info.balance is defined
+      - result.vultr_account_info.last_payment_amount is defined
+      - result.vultr_account_info.last_payment_date is defined
+      - result.vultr_account_info.last_payment_amount is defined
