--- a/tests/integration/targets/cleanup/tasks/cleanup_dns_domain.yml
+++ b/tests/integration/targets/cleanup/tasks/cleanup_dns_domain.yml
@@ -6,6 +6,7 @@
       Authorization: Bearer {{ vultr_api_key }}
     status_code: 200
   register: res
+  no_log: true
 
 - name: Remove all dns domains created by this test run
   uri:
@@ -18,3 +19,4 @@
   with_items: "{{ res.json.domains }}"
   loop_control:
     label: "{{ item.domain }}"
+  no_log: true
