--- a/tests/integration/targets/cleanup/tasks/cleanup_network.yml
+++ b/tests/integration/targets/cleanup/tasks/cleanup_network.yml
@@ -6,6 +6,7 @@
       Authorization: Bearer {{ vultr_api_key }}
     status_code: 200
   register: res
+  no_log: true
 
 - name: Remove all networks created by this test run
   uri:
@@ -18,3 +19,4 @@
   with_items: "{{ res.json.networks }}"
   loop_control:
     label: "{{ item.description }}"
+  no_log: true
