--- a/tests/integration/targets/dns_record/tasks/remove_record.yml
+++ b/tests/integration/targets/dns_record/tasks/remove_record.yml
@@ -9,17 +9,17 @@
     record_type: "{{ item.record_type | default(omit) }}"
     multiple: "{{ item.multiple | default(omit) }}"
     state: absent
-  check_mode: yes
+  check_mode: true
   register: result
 - name: verify test remove a dns record in check mode
   assert:
     that:
-    - result is changed
-    - result.vultr_dns_record.data == "{{ item.update_data | default(item.data) }}"
-    - result.vultr_dns_record.name == "{{ item.name | default("") }}"
-    - result.vultr_dns_record.type == "{{ item.record_type | default('A') }}"
-    - result.vultr_dns_record.ttl == {{ item.update_ttl | default(300) }}
-    - result.vultr_dns_record.priority == {{ item.update_priority | default(item.priority | default(0)) }}
+      - result is changed
+      - result.vultr_dns_record.data == "{{ item.update_data | default(item.data) }}"
+      - result.vultr_dns_record.name == "{{ item.name | default("") }}"
+      - result.vultr_dns_record.type == "{{ item.record_type | default('A') }}"
+      - result.vultr_dns_record.ttl == {{ item.update_ttl | default(300) }}
+      - result.vultr_dns_record.priority == {{ item.update_priority | default(item.priority | default(0)) }}
 
 - name: test remove second dns record in check mode
   dns_record:
@@ -29,18 +29,18 @@
     record_type: "{{ item.record_type | default(omit) }}"
     multiple: "{{ item.multiple | default(omit) }}"
     state: absent
-  check_mode: yes
+  check_mode: true
   register: result
   when: item.multiple is defined and item.multiple == true
 - name: verify test remove a dns record in check mode
   assert:
     that:
-    - result is changed
-    - result.vultr_dns_record.data == "{{ item.data | default(item.data) }}"
-    - result.vultr_dns_record.name == "{{ item.name | default("") }}"
-    - result.vultr_dns_record.type == "{{ item.record_type | default('A') }}"
-    - result.vultr_dns_record.ttl == {{ item.ttl | default(300) }}
-    - result.vultr_dns_record.priority == {{ item.priority | default(0) }}
+      - result is changed
+      - result.vultr_dns_record.data == "{{ item.data | default(item.data) }}"
+      - result.vultr_dns_record.name == "{{ item.name | default("") }}"
+      - result.vultr_dns_record.type == "{{ item.record_type | default('A') }}"
+      - result.vultr_dns_record.ttl == {{ item.ttl | default(300) }}
+      - result.vultr_dns_record.priority == {{ item.priority | default(0) }}
   when: item.multiple is defined and item.multiple == true
 
 - name: test remove a dns record
@@ -55,12 +55,12 @@
 - name: verify test remove a dns record
   assert:
     that:
-    - result is changed
-    - result.vultr_dns_record.data == "{{ item.update_data | default(item.data) }}"
-    - result.vultr_dns_record.name == "{{ item.name | default("") }}"
-    - result.vultr_dns_record.type == "{{ item.record_type | default('A') }}"
-    - result.vultr_dns_record.ttl == {{ item.update_ttl | default(300) }}
-    - result.vultr_dns_record.priority == {{ item.update_priority | default(item.priority | default(0)) }}
+      - result is changed
+      - result.vultr_dns_record.data == "{{ item.update_data | default(item.data) }}"
+      - result.vultr_dns_record.name == "{{ item.name | default("") }}"
+      - result.vultr_dns_record.type == "{{ item.record_type | default('A') }}"
+      - result.vultr_dns_record.ttl == {{ item.update_ttl | default(300) }}
+      - result.vultr_dns_record.priority == {{ item.update_priority | default(item.priority | default(0)) }}
 
 - name: test remove second dns record
   dns_record:
@@ -75,12 +75,12 @@
 - name: verify test remove a dns record
   assert:
     that:
-    - result is changed
-    - result.vultr_dns_record.data == "{{ item.data }}"
-    - result.vultr_dns_record.name == "{{ item.name | default("") }}"
-    - result.vultr_dns_record.type == "{{ item.record_type | default('A') }}"
-    - result.vultr_dns_record.ttl == {{ item.ttl | default(300) }}
-    - result.vultr_dns_record.priority == {{ item.priority | default(0) }}
+      - result is changed
+      - result.vultr_dns_record.data == "{{ item.data }}"
+      - result.vultr_dns_record.name == "{{ item.name | default("") }}"
+      - result.vultr_dns_record.type == "{{ item.record_type | default('A') }}"
+      - result.vultr_dns_record.ttl == {{ item.ttl | default(300) }}
+      - result.vultr_dns_record.priority == {{ item.priority | default(0) }}
   when: item.multiple is defined and item.multiple == true
 
 - name: test remove a dns record idempotence
@@ -95,7 +95,7 @@
 - name: verify test remove a dns record idempotence
   assert:
     that:
-    - result is not changed
+      - result is not changed
 
 - name: test remove second dns record idempotence
   dns_record:
@@ -110,5 +110,5 @@
 - name: verify test remove a dns record idempotence
   assert:
     that:
-    - result is not changed
+      - result is not changed
   when: item.multiple is defined and item.multiple == true
