--- a/tests/integration/targets/firewall_group/tasks/tests.yml
+++ b/tests/integration/targets/firewall_group/tasks/tests.yml
@@ -9,27 +9,27 @@
 - name: verify setup
   assert:
     that:
-    - result is success
+      - result is success
 
 - name: test fail if missing name
   vultr.cloud.firewall_group:
   register: result
-  ignore_errors: yes
+  ignore_errors: true
 - name: verify test fail if missing description
   assert:
     that:
-    - result is failed
-    - 'result.msg == "missing required arguments: description"'
+      - result is failed
+      - 'result.msg == "missing required arguments: description"'
 
 - name: test create firewall group in check mode
   vultr.cloud.firewall_group:
     name: "{{ vultr_firewall_group_name }}"
   register: result
-  check_mode: yes
+  check_mode: true
 - name: verify test create firewall group in check mode
   assert:
     that:
-    - result is changed
+      - result is changed
 
 - name: test create firewall group
   vultr.cloud.firewall_group:
@@ -38,8 +38,8 @@
 - name: verify test create firewall group
   assert:
     that:
-    - result is changed
-    - result.vultr_firewall_group.description == vultr_firewall_group_name
+      - result is changed
+      - result.vultr_firewall_group.description == vultr_firewall_group_name
 
 - name: test create firewall group idempotence
   vultr.cloud.firewall_group:
@@ -49,20 +49,20 @@
 - name: verify test create firewall group idempotence
   assert:
     that:
-    - result is not changed
-    - result.vultr_firewall_group.description == vultr_firewall_group_name
+      - result is not changed
+      - result.vultr_firewall_group.description == vultr_firewall_group_name
 
 - name: test absent firewall group in check mode
   vultr.cloud.firewall_group:
     name: "{{ vultr_firewall_group_name }}"
     state: absent
   register: result
-  check_mode: yes
+  check_mode: true
 - name: verify test absent firewall group in check mode
   assert:
     that:
-    - result is changed
-    - result.vultr_firewall_group.description == vultr_firewall_group_name
+      - result is changed
+      - result.vultr_firewall_group.description == vultr_firewall_group_name
 
 - name: test absent firewall group
   vultr.cloud.firewall_group:
@@ -72,8 +72,8 @@
 - name: verify test absent firewall group
   assert:
     that:
-    - result is changed
-    - result.vultr_firewall_group.description == vultr_firewall_group_name
+      - result is changed
+      - result.vultr_firewall_group.description == vultr_firewall_group_name
 
 - name: test absent firewall group idempotence
   vultr.cloud.firewall_group:
@@ -83,4 +83,4 @@
 - name: verify test absent firewall group idempotence
   assert:
     that:
-    - result is not changed
+      - result is not changed
