--- a/tests/integration/targets/network/tasks/tests.yml
+++ b/tests/integration/targets/network/tasks/tests.yml
@@ -10,17 +10,17 @@
 - name: verify setup
   assert:
     that:
-    - result is success
+      - result is success
 
 - name: test fail if missing description
   network:
   register: result
-  ignore_errors: yes
+  ignore_errors: true
 - name: verify test fail if missing description
   assert:
     that:
-    - result is failed
-    - 'result.msg == "missing required arguments: description"'
+      - result is failed
+      - 'result.msg == "missing required arguments: description"'
 
 - name: test fail if missing params for state=present
   network:
@@ -30,8 +30,8 @@
 - name: verify fail if missing params for state=present
   assert:
     that:
-    - result is failed
-    - 'result.msg == "state is present but all of the following are missing: v4_subnet, region"'
+      - result is failed
+      - 'result.msg == "state is present but all of the following are missing: v4_subnet, region"'
 
 - name: test create network in check mode
   network:
@@ -44,7 +44,7 @@
 - name: verify test create server in check mode
   assert:
     that:
-    - result is changed
+      - result is changed
 
 - name: test create network
   network:
@@ -57,11 +57,11 @@
 - name: verify test create network
   assert:
     that:
-    - result is changed
-    - result.vultr_network.description == vultr_network_description
-    - result.vultr_network.region == vultr_network_region
-    - result.vultr_network.v4_subnet == vultr_network_v4_subnet
-    - result.vultr_network.v4_subnet_mask == vultr_network_v4_subnet_mask
+      - result is changed
+      - result.vultr_network.description == vultr_network_description
+      - result.vultr_network.region == vultr_network_region
+      - result.vultr_network.v4_subnet == vultr_network_v4_subnet
+      - result.vultr_network.v4_subnet_mask == vultr_network_v4_subnet_mask
 
 - name: test create network idempotence
   network:
@@ -74,11 +74,11 @@
 - name: verify test network idempotence
   assert:
     that:
-    - result is not changed
-    - result.vultr_network.description == vultr_network_description
-    - result.vultr_network.region == vultr_network_region
-    - result.vultr_network.v4_subnet == vultr_network_v4_subnet
-    - result.vultr_network.v4_subnet_mask == vultr_network_v4_subnet_mask
+      - result is not changed
+      - result.vultr_network.description == vultr_network_description
+      - result.vultr_network.region == vultr_network_region
+      - result.vultr_network.v4_subnet == vultr_network_v4_subnet
+      - result.vultr_network.v4_subnet_mask == vultr_network_v4_subnet_mask
 
 - name: test destroy network in check mode
   network:
@@ -90,8 +90,8 @@
 - name: verify test destroy network in check mode
   assert:
     that:
-    - result is changed
-    - result.vultr_network.description == vultr_network_description
+      - result is changed
+      - result.vultr_network.description == vultr_network_description
 
 - name: test destroy network volume
   network:
@@ -102,8 +102,8 @@
 - name: verify test destroy an existing network
   assert:
     that:
-    - result is changed
-    - result.vultr_network.description == vultr_network_description
+      - result is changed
+      - result.vultr_network.description == vultr_network_description
 
 - name: test destroy an existing network idempotence
   network:
@@ -114,4 +114,4 @@
 - name: verify test destroy an existing network idempotence
   assert:
     that:
-    - result is not changed
+      - result is not changed
