--- a/tests/integration/targets/region_info/tasks/main.yml
+++ b/tests/integration/targets/region_info/tasks/main.yml
@@ -4,13 +4,13 @@
 ---
 - name: test gather vultr region info in check mode
   vultr.cloud.region_info:
-  check_mode: yes
+  check_mode: true
   register: result
 
 - name: verify test gather vultr region info in check mode
   assert:
     that:
-    - result.vultr_region_info|selectattr('city','equalto','Atlanta') | list | count == 1
+      - result.vultr_region_info|selectattr('city','equalto','Atlanta') | list | count == 1
 
 - name: test gather vultr region info
   vultr.cloud.region_info:
@@ -19,4 +19,4 @@
 - name: verify test gather vultr region info
   assert:
     that:
-    - result.vultr_region_info|selectattr('city','equalto','Atlanta') | list | count == 1
+      - result.vultr_region_info|selectattr('city','equalto','Atlanta') | list | count == 1
