--- a/tests/integration/targets/startup_script_info/tasks/tests.yml
+++ b/tests/integration/targets/startup_script_info/tasks/tests.yml
@@ -5,20 +5,20 @@
   vultr.cloud.startup_script_info:
 
 - name: Create the script
-  vultr_startup_script:
-    name: '{{ startup_script_name }}'
-    script_type: '{{ startup_script_type }}'
-    script: '{{ startup_script_content }}'
+  vultr.cloud.startup_script_info:
+    name: "{{ startup_script_name }}"
+    script_type: "{{ startup_script_type }}"
+    script: "{{ startup_script_content }}"
 
 - name: test gather vultr startup script info in check mode
   vultr.cloud.startup_script_info:
-  check_mode: yes
+  check_mode: true
   register: result
 
 - name: verify test gather vultr startup script info in check mode
   assert:
     that:
-    - result.vultr_startup_script_info|selectattr('name','equalto','{{ startup_script_name }}') | list | count == 1
+      - result.vultr_startup_script_info|selectattr('name','equalto','{{ startup_script_name }}') | list | count == 1
 
 - name: test gather vultr startup script info
   vultr.cloud.startup_script_info:
@@ -27,9 +27,9 @@
 - name: verify test gather vultr startup script info
   assert:
     that:
-    - result.vultr_startup_script_info|selectattr('name','equalto','{{ startup_script_name }}') | list | count == 1
+      - result.vultr_startup_script_info|selectattr('name','equalto','{{ startup_script_name }}') | list | count == 1
 
 - name: Delete the script
   vultr_startup_script:
-    name: '{{ startup_script_name }}'
+    name: "{{ startup_script_name }}"
     state: absent
