--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -4,11 +4,14 @@ name: Collection integration
 on:
   pull_request:
     types: [labeled]
+  push:
+    branches:
+      - main
 
 jobs:
   integration-test:
     name: Integration test using Python ${{ matrix.python-version }}
-    if: ${{ github.event.label.name == 'automation' }}
+    if: ${{ github.event.label.name == 'automation' || github.ref_name == 'main' }}
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -17,10 +20,9 @@ jobs:
       fail-fast: false
       matrix:
         runner-python-version:
-          - 3.6
+          - 3.8
         python-version:
-          - 3.6
-          - 2.7
+          - 3.8
     steps:
       - name: Check out code
         uses: actions/checkout@v2
@@ -56,10 +58,9 @@ jobs:
           -v
           --diff
           --color
-          --python ${{ matrix.python-version }}
           --continue-on-error
           --coverage
-          cloud/vultr
+          cloud/vultr/
 
       - name: Generate coverage report
         run: >-
