ci: limit integration runs to specific path changes

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -7,6 +7,10 @@ on:
   push:
     branches:
       - main
+    paths:
+      - ".github/workflows/integration.yml"
+      - "plugins/**"
+      - "tests/**"
 
 jobs:
   integration-test:
